--- a/zsh/.env
+++ b/zsh/.env
@@ -1,4 +1,4 @@
-enable_langs=(python golang node)
+enable_langs=(python golang nvm)
 
 # -- AWS -----------------------------------------------------------------------
 export AWS_CREDENTIAL_FILE="${HOME}/.aws/credentials"
@@ -32,6 +32,12 @@ if [[ "$enable_langs" =~ "node" ]]; then
   NPM_PACKAGES="${HOME}/.npm-packages"
   PATH="${PATH}:${NPM_PACKAGES}/bin"
   NODE_PATH="${NPM_PACKAGES}/lib/node_modules:${NODE_PATH}"
+fi
+
+if [[ "$enable_langs" =~ "nvm" ]]; then
+  [ -z "$NVM_DIR" ] && export NVM_DIR="$HOME/.nvm"
+  source /usr/share/nvm/nvm.sh
+  source /usr/share/nvm/install-nvm-exec
 fi
 
 if [[ "$enable_langs" =~ "php" ]]; then
