--- a/shell/.env
+++ b/shell/.env
@@ -1,4 +1,4 @@
-enable_langs=(python golang nvm)
+enable_langs=(python golang)
 
 # -- AWS -----------------------------------------------------------------------
 export AWS_CREDENTIAL_FILE="${HOME}/.aws/credentials"
@@ -6,7 +6,7 @@ export AWS_PROFILE="default"
 export EC2_REGION="eu-west-1"
 
 # -- Language Support ----------------------------------------------------------
-if [[ "$enable_langs" =~ "python" ]]; then
+if [[ "$enable_langs" =~ "python" ]] && (( $+commands[pyenv] )); then
   export PYENV_ROOT="${HOME}/.pyenv"
   export PATH="${PYENV_ROOT}/bin:${PATH}"
   eval "$(pyenv init -)"
@@ -23,7 +23,7 @@ if [[ "$enable_langs" =~ "java" ]]; then
   [[ -s "${HOME}/.sdkman/bin/sdkman-init.sh" ]] && source "${HOME}/.sdkman/bin/sdkman-init.sh"
 fi
 
-if [[ "$enable_langs" =~ "ruby" ]]; then
+if [[ "$enable_langs" =~ "ruby" ]] && (( $+commands[chruby] )); then
   source /usr/local/opt/chruby/share/chruby/chruby.sh
   chruby ruby-2.3.1
 fi
@@ -34,7 +34,7 @@ if [[ "$enable_langs" =~ "node" ]]; then
   NODE_PATH="${NPM_PACKAGES}/lib/node_modules:${NODE_PATH}"
 fi
 
-if [[ "$enable_langs" =~ "nvm" ]]; then
+if [[ "$enable_langs" =~ "nvm" ]] && (( $+commands[nvm] )); then
   [ -z "$NVM_DIR" ] && export NVM_DIR="$HOME/.nvm"
   source /usr/share/nvm/nvm.sh
   source /usr/share/nvm/install-nvm-exec
@@ -48,7 +48,7 @@ fi
 export MC_SKIN=$HOME/.config/mc/solarized.ini
 export _Z_DATA=/var/tmp/karelian.z # stfu z
 export ANSIBLE_NOCOWS=1
-alias ag='ag --hidden' # search hidden
+alias ag='ag --hidden -i' # search hidden
 PATH="${PATH}:${HOME}/bin"
 
 # -- OSX -----------------------------------------------------------------------
