--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "_vendor/fzf"]
 	path = _vendor/fzf
 	url = git@github.com:rarescosma/env.fzf.git
+[submodule "_vendor/zplug"]
+	path = _vendor/zplug
+	url = https://github.com/zplug/zplug.git
