--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,9 @@
-
 [submodule "_vendor/oh-my-zsh"]
 	path = _vendor/oh-my-zsh
-	url = git@github.com:rarescosma/env.oh-my-zsh.git
+	url = https://github.com/rarescosma/env.oh-my-zsh.git
 [submodule "_vendor/fzf"]
 	path = _vendor/fzf
-	url = git@github.com:rarescosma/env.fzf.git
+	url = https://github.com/rarescosma/env.fzf.git
 [submodule "_vendor/zplug"]
 	path = _vendor/zplug
 	url = https://github.com/zplug/zplug.git
