--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -102,4 +102,13 @@ set-window-option -g automatic-rename off
 set -g mouse on
 setw -g mode-keys vi
 setw -g xterm-keys on
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi MouseDragEnd1Pane \
+  send-keys -X copy-pipe "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi DoubleClick1Pane \
+  select-pane \; \
+  send-keys -X select-word \; \
+  send-keys -X copy-pipe "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi TripleClick1Pane \
+  select-pane \; \
+  send-keys -X select-line \; \
+  send-keys -X copy-pipe "xclip -in -selection clipboard"
