--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -110,23 +110,27 @@ mode "resize" {
     # Pressing right will grow the window’s width.
     # Pressing up will shrink the window’s height.
     # Pressing down will grow the window’s height.
-    bindsym $mod+h resize shrink width 10 px or 10 ppt
-    bindsym $mod+j resize grow height 10 px or 10 ppt
-    bindsym $mod+k resize shrink height 10 px or 10 ppt
-    bindsym $mod+l resize grow width 10 px or 10 ppt
+    bindsym $mod+h resize shrink width 5 px or 5 ppt
+    bindsym $mod+k resize grow height 5 px or 5 ppt
+    bindsym $mod+j resize shrink height 5 px or 5 ppt
+    bindsym $mod+l resize grow width 5 px or 5 ppt
 
     # same bindings, but for the arrow keys
-    bindsym Left resize shrink width 10 px or 10 ppt
-    bindsym Down resize grow height 10 px or 10 ppt
-    bindsym Up resize shrink height 10 px or 10 ppt
+    bindsym Left  resize shrink width 10 px or 10 ppt
+    bindsym Up    resize grow height 10 px or 10 ppt
+    bindsym Down  resize shrink height 10 px or 10 ppt
     bindsym Right resize grow width 10 px or 10 ppt
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
-
 bindsym $mod+r mode "resize"
+
+bindsym $mod+Ctrl+h resize shrink width 1 px or 1 ppt
+bindsym $mod+Ctrl+k resize grow height 1 px or 1 ppt
+bindsym $mod+Ctrl+j resize shrink height 1 px or 1 ppt
+bindsym $mod+Ctrl+l resize grow width 1 px or 1 ppt
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -204,6 +208,6 @@ bindsym $mod+Shift+r restart
 bindsym $mod+Ctrl+r reload
 
 # Application management
-focus_on_window_activation focus
+focus_on_window_activation focus 
 focus_follows_mouse no
 hide_edge_borders horizontal
