Re-attachable term

--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -13,6 +13,7 @@ for_window [window_role="task_dialog"] floating enable
 
 # terminals
 bindsym $mod+Return exec urxvt
+bindsym $mod+Shift+Return exec urxvt -e sh -c "tmux -q has-session && exec tmux attach-session -d || exec tmux new-session -s base"
 bindsym $mod+t exec thunar
 bindsym $mod+slash exec wm browser::launch chromium
 bindsym $mod+Shift+slash exec wm browser::launch google-chrome-stable
