--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -205,6 +205,8 @@ bindsym XF86PowerOff mode "$mode_system"
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 
+bindsym $mod+Shift+d exec "~/bin/dual-on"
+
 # reload the configuration file
 bindsym $mod+Ctrl+r reload
 
