[tmux] empty window rename prompt

--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -95,6 +95,7 @@ bind C-b set-window-option synchronize-panes
 bind-key / copy-mode \; send-key ?
 
 # renaming
+bind-key , command-prompt "rename-window '%%'"
 set-option -g allow-rename off
 set-window-option -g automatic-rename off
 
