--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -10,6 +10,7 @@ floating_modifier $mod
 # Start more windows floating.
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
+for_window [class="^jetbrains-.+"][window_type=dialog] focus
 
 # terminals
 bindsym $mod+Return exec urxvt
@@ -215,3 +216,4 @@ bindsym $mod+Ctrl+r reload
 focus_on_window_activation focus
 focus_follows_mouse no
 hide_edge_borders horizontal
+
