Tmux: automatically renumber windows

--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -14,6 +14,7 @@ bind a send-prefix
 
 # start numbering at 1
 set -g base-index 1
+set -g renumber-windows on
 
 # --- colors (solarized dark)
 # default statusbar colors
