--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -153,8 +153,8 @@ bar {
     position top
     output eDP1
     output DP2
-    # Using custom i3status.conf
-    status_command i3status -c ~/.i3/i3status.conf
+
+    status_command i3blocks -c ~/.i3/i3blocks.conf
 }
 
 # locker
