--- a/wm/.i3/i3blocks.conf
+++ b/wm/.i3/i3blocks.conf
@@ -1,16 +1,10 @@
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
 command=~/.i3/blocks/$BLOCK_NAME
-full_text=
+full_text=|
 separator=false
-separator_block_width=28
+separator_block_width=9
 color=#a7adba
-
-[vpn]
-label=
-interval=5
-
-[separator]
 
 [battery]
 label=
@@ -41,3 +35,10 @@ interval=1
 label=
 command=date '+%Y-%m-%d %H:%M'
 interval=5
+
+[separator]
+
+[vpn]
+label=
+interval=5
+full_text=
