--- a/wm/.i3/i3blocks.conf
+++ b/wm/.i3/i3blocks.conf
@@ -1,10 +1,16 @@
 # The top properties below are applied to every block, but can be overridden.
 # Each block command defaults to the script name to avoid boilerplate.
 command=~/.i3/blocks/$BLOCK_NAME
-full_text=|
-separator=false
-separator_block_width=9
+full_text=
+separator=true
+separator_block_width=20
 color=#a7adba
+
+[vpn]
+label=
+interval=5
+
+[separator]
 
 [battery]
 label=
@@ -33,12 +39,13 @@ interval=1
 
 [time]
 label=
-command=date '+%Y-%m-%d %H:%M'
+command=date '+%Y-%m-%d <span color="#ffffff">%H:%M</span>'
+markup=pango
 interval=5
 
 [separator]
 
-[vpn]
-label=
-interval=5
-full_text=
+[noop]
+interval=60
+command=echo "<span>&#x200b;</span>"
+markup=pango
