--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -14,7 +14,7 @@ for_window [class="^jetbrains-.+"][window_type=dialog] focus
 
 # terminals
 bindsym $mod+Return exec urxvt
-bindsym $mod+0x60 exec urxvt -e sh -c "tmux -q has-session && exec tmux attach-session -d || exec tmux new-session -s base"
+bindsym $mod+0x60 exec urxvt -e sh -c "tmux attach -d -t base || exec tmux new -s base"
 bindsym $mod+t exec thunar
 bindsym $mod+slash exec wm browser::launch chromium
 bindsym $mod+Shift+slash exec wm browser::launch google-chrome-stable
@@ -152,6 +152,7 @@ bar {
     # i3bar position
     position top
     output eDP1
+    output DP1
     output DP2
 
     status_command i3blocks -c ~/.i3/i3blocks.conf
