--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -16,7 +16,7 @@ for_window [class="^jetbrains-.+"][window_type=dialog] focus
 bindsym $mod+Return exec urxvt
 bindsym $mod+0x60 exec urxvt -e sh -c "tmux attach -d -t base || exec tmux new -s base"
 bindsym $mod+t exec thunar
-bindsym $mod+slash exec wm browser::launch chromium
+bindsym $mod+slash exec chromium
 bindsym $mod+Shift+slash exec wm browser::launch google-chrome-stable
 
 # kill focused window
@@ -217,4 +217,3 @@ bindsym $mod+Ctrl+r reload
 focus_on_window_activation focus
 focus_follows_mouse no
 hide_edge_borders horizontal
-
