Consolidate all scripts into /bin

--- a/_ansible/user.yaml
+++ b/_ansible/user.yaml
@@ -35,8 +35,9 @@
         - htop
         - mc
         - moc
-        - net
         - shell
         - vim
         - wm
 
+    - name: stow bin
+      shell: stow -d {{ dots }} -t ~/bin bin
