--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "_vendor/oh-my-zsh"]
 	path = _vendor/oh-my-zsh
-	url = https://github.com/rarescosma/env.oh-my-zsh.git
+	url = git@github.com:rarescosma/env.oh-my-zsh.git
 [submodule "_vendor/fzf"]
 	path = _vendor/fzf
-	url = https://github.com/rarescosma/env.fzf.git
+	url = git@github.com:rarescosma/env.fzf.git
 [submodule "_vendor/zplug"]
 	path = _vendor/zplug
-	url = https://github.com/zplug/zplug.git
+	url = git://github.com/zplug/zplug.git
 [submodule "_vendor/memoize"]
 	path = _vendor/memoize
-	url = https://github.com/aes/memoize.git
+	url = git@github.com:rarescosma/memoize.git
