--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,13 @@
 [submodule "_vendor/fzf"]
 	path = _vendor/fzf
 	url = git@github.com:rarescosma/env.fzf.git
-[submodule "_vendor/zplug"]
-	path = _vendor/zplug
-	url = git://github.com/zplug/zplug.git
+[submodule "_vendor/fz"]
+	path = _vendor/fz
+	url = git@github.com:rarescosma/env.fz.git
 [submodule "_vendor/memoize"]
 	path = _vendor/memoize
 	url = git@github.com:rarescosma/memoize.git
+[submodule "_vendor/z"]
+	path = _vendor/z
+	url = git://github.com/rupa/z.git
+
