Manage seedbox via _nodes

--- a/_nodes/seedbox/etc/nginx/sites-enabled/flood.conf
+++ b/_nodes/seedbox/etc/nginx/sites-enabled/flood.conf
@@ -1,5 +1,4 @@
 server {
-  listen 80;
 
   server_name    flood.getbetter.ro;
 
@@ -16,14 +15,29 @@ server {
   }
 
     listen 443 ssl; # managed by Certbot
-ssl_certificate /etc/letsencrypt/live/flood.getbetter.ro/fullchain.pem; # managed by Certbot
-ssl_certificate_key /etc/letsencrypt/live/flood.getbetter.ro/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/flood.getbetter.ro-0002/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/flood.getbetter.ro-0002/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
 
 
     if ($scheme != "https") {
         return 301 https://$host$request_uri;
     } # managed by Certbot
+
+
+
+
+}
+server {
+    if ($host = flood.getbetter.ro) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+  listen 80;
+
+  server_name    flood.getbetter.ro;
+    return 404; # managed by Certbot
 
 
 }
