--- a/_nodes/seedbox/etc/supervisor/conf.d/rtorrent.conf
+++ b/_nodes/seedbox/etc/supervisor/conf.d/rtorrent.conf
@@ -7,7 +7,8 @@ autorestart=true
 stopsignal=INT
 environment=TERM="screen",HOME="/home/ubuntu",USER="ubuntu"
 user=ubuntu
-stdout_logfile=/home/ubuntu/rtorrent.log
+#stdout_logfile=/home/ubuntu/rtorrent.log
+stdout_logfile=/dev/null
 stderr_logfile=/home/ubuntu/rtorrent.err
 
 
