--- a/_nodes/seedbox/home/ubuntu/.rtorrent.rc
+++ b/_nodes/seedbox/home/ubuntu/.rtorrent.rc
@@ -19,7 +19,7 @@ upload_rate = 500
 directory = /mnt/seedbox/fresh
 
 # Default session directory
-session = ~/.rtorrent/session
+session = ~/session_2
 
 # Watch a directory for new torrents, and stop those that have been
 # deleted.
@@ -40,6 +40,6 @@ encryption = allow_incoming,enable_retry,prefer_plaintext
 
 check_hash = no
 
-system.file.allocate = 1
+#system.file.allocate = 1
 
 
