Instant tmux escapes

--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -100,6 +100,9 @@ bind-key , command-prompt "rename-window '%%'"
 set-option -g allow-rename off
 set-window-option -g automatic-rename off
 
+# instant escapes
+set -g escape-time 0
+
 # copy/paste/search
 set -g mouse on
 setw -g mode-keys vi
