--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -117,3 +117,7 @@ bind-key -T copy-mode-vi TripleClick1Pane \
   select-pane \; \
   send-keys -X select-line \; \
   send-keys -X copy-pipe "xclip -in -selection clipboard"
+
+# extrakto config
+set -g @extrakto_grab_area "0"
+run-shell ~/.tmux/extrakto/extrakto.tmux
