--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -2,7 +2,7 @@
 set $mod Mod4
 set $alt Mod1
 
-font "pango:DejaVu Sans Mono 7" #orig=10
+font "pango:DejaVu Sans Mono 10" #orig=10
 
 # use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -220,3 +220,6 @@ bindsym $mod+Ctrl+r reload
 focus_on_window_activation focus
 focus_follows_mouse no
 hide_edge_borders horizontal
+
+# automatic back-and-forth
+workspace_auto_back_and_forth yes
