--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -15,6 +15,7 @@ for_window [class="^jetbrains-.+"][window_type=dialog] focus
 # terminals
 bindsym $mod+Return exec urxvt
 bindsym $mod+0x60 exec urxvt -e sh -c "tmux attach -d -t base || exec tmux new -s base"
+bindsym $mod+0x27 exec subl3
 bindsym $mod+t exec thunar
 bindsym $mod+slash exec wm browser::launch chromium
 bindsym $mod+Shift+slash exec wm browser::launch google-chrome-stable
