[i3] add block to display wlan link rate

--- a/wm/.i3/i3blocks.conf
+++ b/wm/.i3/i3blocks.conf
@@ -37,6 +37,12 @@ interval=1
 
 [separator]
 
+[wlan]
+command=~/.i3/blocks/wlan
+interval=2
+
+[separator]
+
 [time]
 label=
 command=date '+%Y-%m-%d <span color="#ffffff">%H:%M</span>'
