Switch to public DNS

--- a/_arch/etc/unbound/unbound.conf
+++ b/_arch/etc/unbound/unbound.conf
@@ -10,7 +10,9 @@ server:
     forward-addr: 10.10.10.10@53
 
   forward-zone:
+    name: "internal.machines."
+    forward-addr: 10.10.10.10@53
+
+  forward-zone:
     name: "."
-    forward-tls-upstream: yes
-    forward-addr: 91.239.100.100@853
-    forward-addr: 2001:67c:28a4::@853
+    forward-addr: 8.8.8.8@53
