Upgrade the album fancy index functionality

--- a/_nodes/seedbox/etc/nginx/sites-enabled/media.flood.conf
+++ b/_nodes/seedbox/etc/nginx/sites-enabled/media.flood.conf
@@ -1,4 +1,4 @@
-proxy_cache_path /tmp/nginx-thumbnails levels=1:2 keys_zone=thumbnail_cache:16M inactive=60d max_size=1200M;
+proxy_cache_path /mnt/media/.nginxthumbs levels=1:2 keys_zone=thumbnail_cache:16M inactive=60d max_size=1200M;
 
 server {
   listen 10199;
@@ -10,8 +10,8 @@ server {
 
   root /mnt/media;
 
-  location ~ ^/Photos/([^/]+)/t/([\d-]+)x([\d-]+)/(.*) {
-    alias "/mnt/media/Photos/$1/$4";
+  location ~ ^/Photos/Albums/([^/]+)/t/([\d-]+)x([\d-]+)/(.*) {
+    alias "/mnt/media/Photos/Albums/$1/$4";
     image_filter resize $2 $3;
   }
 }
@@ -42,7 +42,15 @@ server {
     fancyindex_css_href /.fancyindex/style.css;
   }
 
-  location ~ ^/Photos/([^/]+)/t/([\d-]+)x([\d-]+)/(.*) {
+  location ~ ^/.fancyindex/(.*) {
+    auth_basic off;
+  }
+
+  location ~ ^/Photos/.js/(.*) {
+    auth_basic off;
+  }
+
+  location ~ ^/Photos/Albums/([^/]+)/t/([\d-]+)x([\d-]+)/(.*) {
     proxy_pass http://localhost:10199;
     proxy_cache thumbnail_cache;
     proxy_cache_key "$host$document_uri$is_args";
@@ -52,14 +60,16 @@ server {
     proxy_cache_use_stale error timeout invalid_header updating;
     proxy_http_version 1.1;
     expires 30d;
+    auth_basic off;
   }
 
-  location ~ /Photos/(.+)/$ {
+  location ~ /Photos/Albums/(.+)/$ {
     autoindex on;
     autoindex_format xml;
     xslt_string_param title $1;
     xslt_stylesheet /etc/nginx/gallery.xslt;
     try_files $uri/ =404;
+    auth_basic off;
   }
 
   listen 443 ssl; # managed by Certbot
