Wire in a git template dir with a prepare-commit-msg hook for ticket numbers

--- a/devel/.gitconfig
+++ b/devel/.gitconfig
@@ -23,6 +23,8 @@
 	untrackedCache = true
 [commit]
 	gpgsign = true
+[init]
+	templatedir = ~/.git-template
 [interactive]
 	diffFilter = "/usr/share/git/diff-highlight/diff-highlight"
 [merge]
