Start dancing with the devil

--- a/devel/.gitconfig
+++ b/devel/.gitconfig
@@ -17,7 +17,7 @@
 	untracked = blue
 [core]
 	autocrlf = input
-	editor = subl3 -w
+	editor = vscodium -w
 	excludesfile = ~/.gitexcludes
 	pager = diff-so-fancy | less --tabs=4 -RFX
 	untrackedCache = true
