i3: add super-simple focus workflow

--- a/wm/.i3/i3blocks.conf
+++ b/wm/.i3/i3blocks.conf
@@ -6,6 +6,13 @@ separator=true
 separator_block_width=20
 color=#a7adba
 
+[focus]
+min_width=700
+align=left
+color=#ffffff
+label=
+interval=2
+
 [vpn]
 label=
 interval=5
