Add roamresearch as chromium app and make it behave under i3

--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -8,14 +8,14 @@ font "pango:DejaVu Sans Mono 10" #orig=10
 floating_modifier $mod
 
 # specific window configuration
-for_window [window_role="pop-up"] floating enable
+for_window [window_role="pop-up" instance="^(?!roamresearch).*"] floating enable
 for_window [class="Pinentry"] floating enable
 for_window [class="^jetbrains-.+"][window_type=dialog] focus
 
 # terminals
 bindsym $mod+Return exec urxvt
 bindsym $mod+0x60 exec urxvt -e sh -c "tmux attach -d -t base || exec tmux new -s base"
-bindsym $mod+0x27 exec subl3
+bindsym $mod+0x27 exec --no-startup-id roam 
 bindsym $mod+t exec thunar
 bindsym $mod+slash exec wm browser::launch chromium
 bindsym $mod+period exec wm browser::launch chromium --incognito
