[i3] Add bandwidth measurement block

--- a/wm/.i3/i3blocks.conf
+++ b/wm/.i3/i3blocks.conf
@@ -44,6 +44,12 @@ interval=1
 
 [separator]
 
+[bandwidth]
+label=🕸️
+interval=2
+
+[separator]
+
 [time]
 label=
 command=date '+%Y-%m-%d <span color="#ffffff">%H:%M</span>'
