--- a/devel/.config/VSCodium/User/settings.json
+++ b/devel/.config/VSCodium/User/settings.json
@@ -1,6 +1,6 @@
 {
     "breadcrumbs.enabled": false,
-    "editor.fontFamily": "'Iosevka Term SS08', 'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
+    "editor.fontFamily": "'Iosevka Nerd Font'",
     "editor.fontSize": 14,
     "editor.fontWeight": "400",
     "editor.minimap.enabled": false,
@@ -56,5 +56,6 @@
     "workbench.colorTheme": "Darcula",
     "vscode_custom_css.imports": ["file:///home/karelian/bla.css"],
     "vscode_custom_css.policy": true,
-    "update.mode": "none"
+    "update.mode": "none",
+    "editor.fontLigatures": null
 }
