--- a/wm/.config/gtk-3.0/settings.ini
+++ b/wm/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Adwaita
 gtk-icon-theme-name=Adwaita
-gtk-font-name=Cantarell 10
+gtk-font-name="NotoSans Nerd Font 9"
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
