--- a/wm/.i3/i3blocks.conf
+++ b/wm/.i3/i3blocks.conf
@@ -3,7 +3,7 @@
 command=~/.i3/blocks/$BLOCK_NAME
 full_text=
 separator=true
-separator_block_width=20
+separator_block_width=25
 color=#a7adba
 
 [focus]
@@ -14,26 +14,25 @@ label=
 interval=2
 
 [vpn]
-label=
 interval=5
 
 [separator]
 
 [battery]
-label= 
+label=⚡
 instance=0
 interval=10
 
 [separator]
 
 [disk]
-label=
+label=💾
 interval=10
 
 [separator]
 
 [cpu_usage]
-label=
+label=🌀
 interval=2
 
 [separator]
@@ -45,20 +44,11 @@ interval=2
 [separator]
 
 [bandwidth]
-label=🕸️
+label=🌍
 interval=2
 
 [separator]
 
-[time]
-label= 
-command=date '+%Y-%m-%d <span color="#ffffff">%H:%M</span>'
-markup=pango
+[datetime]
 interval=5
-
-[separator]
-
-[noop]
-interval=60
-command=echo "<span>&#x200b;</span>"
 markup=pango
