--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -153,14 +153,14 @@ bar {
     position top
     colors {
         # Whole color settings
-        background #222222
+        background #000000
         statusline #ffffff
-        separator  #666666
+        separator  #ffffff
 
         # Type             border  background font
         focused_workspace  #008fff #007fff #ffffff
         active_workspace   #333333 #5f676a #ffffff
-        inactive_workspace #333333 #222222 #888888
+        inactive_workspace #333333 #000000 #888888
         urgent_workspace   #aa0000 #990000 #ffffff
     }
 }
