--- a/wm/.i3/config
+++ b/wm/.i3/config
@@ -25,10 +25,10 @@ bindsym $mod+Shift+slash exec wm browser::launch google-chrome-stable
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym $alt+space exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -i -l 15 -p 'dmenu'"
+# start rofi in combi mode
+bindsym $alt+space exec --no-startup-id rofi -show combi
 
-# start winmenu (dmenu wrapper for switching windows)
+# focus on a specific task
 bindsym $mod+space exec --no-startup-id ~/.i3/focus.sh
 
 # change focus
