No confirmation for dragging files along within vscode

--- a/devel/.config/VSCodium/User/settings.json
+++ b/devel/.config/VSCodium/User/settings.json
@@ -72,5 +72,6 @@
         "--follow-imports=silent",
         "--show-column-numbers",
         "--dissalow-untyped-defs"
-    ]
+    ],
+    "explorer.confirmDragAndDrop": false
 }
